 * Maintenance: Migrate dialog instantiation to a new `w-dialog` Stimulus controller (Loveth Omokaro, LB (Ben) Johnston)
 * Maintenance: Support dialog template cloning using a new `w-teleport` Stimulus controller (Loveth Omokaro, LB (Ben) Johnston)
 * Maintenance: Migrate away from using the `"wagtailadmin/shared/field_as_li.html"` template include (Storm Heg)


5.0.2 (21.06.2023)
~~~~~~~~~~~~~~~~~~

 * Added `TitleFieldPanel` to support title / slug field synchronisation (LB (Ben) Johnston)
 * Fix: Prevent JS error when reverting the spinner on a submit button after a validation error (LB (Ben) Johnston)
 * Fix: Prevent crash when comparing page revisions that include `MultipleChooserPanel` (Matt Westcott)
 * Fix: Ensure that title and slug continue syncing after entering non-URL-safe characters (LB (Ben) Johnston)
 * Fix: Ensure that title and slug are synced on keypress, not just on blur (LB (Ben) Johnston)
 * Fix: Add a more visible active state for side panel toggle buttons (Thibaud Colas)
 * Fix: Use custom dark theme colors for revision comparisons (Thibaud Colas)


5.0.1 (25.05.2023)
~~~~~~~~~~~~~~~~~~

 * Fix: Rectify previous fix for TableBlock becoming uneditable after save (Sage Abdullah)
 * Fix: Ensure that copying page correctly picks up the latest revision (Matt Westcott)
 * Fix: Ensure comment buttons always respect `WAGTAILADMIN_COMMENTS_ENABLED` (Thibaud Colas)
 * Fix: Fix error when deleting a single snippet through the bulk actions interface (Sage Abdullah)
 * Fix: Pass the correct `for_update` value for `get_form_class` in `SnippetViewSet` edit views (Sage Abdullah)
 * Fix: Move comment notifications toggle to the comments side panel (Sage Abdullah)
 * Fix: Remove comment button on InlinePanel fields (Sage Abdullah)
 * Fix: Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
 * Fix: Prevent lowercase conversions of IndexView column headers (Virag Jain)
 * Fix: Fix various colour issues in dark mode (Thibaud Colas)