@@ -179,6 +179,10 @@ The Elasticsearch 5 and 6 search backends are deprecated and will be removed in 
 
 The `insert_editor_css` hook has been deprecated. The `insert_global_admin_css` hook has the same functionality, and all uses of `insert_editor_css` should be changed to `insert_global_admin_css`.
 
+### `wagtail.contrib.modeladmin` is deprecated
+
+As part of the [RFC 85: Snippets parity with ModelAdmin](https://github.com/wagtail/rfcs/pull/85) implementation, the `wagtail.contrib.modeladmin` app is deprecated. To manage non-page models in Wagtail, use [`wagtail.snippets`](snippets) instead. If you still rely on ModelAdmin, use the separate [wagtail-modeladmin](https://github.com/wagtail-nest/wagtail-modeladmin) package. The `wagtail.contrib.modeladmin` module will be removed in a future release.
+
 ### `UserPagePermissionsProxy` is deprecated
 
 The undocumented `wagtail.models.UserPagePermissionsProxy` class is deprecated.
